<resources>
    <string name="app_name">LangSync</string>
    <string name="base_url">https://langsyncapp.canadacentral.cloudapp.azure.com/</string>
    <string name="login_with_google">Login with Google</string>
    <string name="signup_with_google">Sign Up with Google</string>
    <string name="logo_text">LangSync</string>
    <string name="sign_up_text"><u>Don\'t have an account? Sign up</u></string>
    <string name="have_account"><u>Already have an account? Login</u></string>
    <string name="title_matches">Matches</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="john_doe">John Doe</string>
    <string name="name_placeholder">John Doe</string>
    <string name="server_client_id">439657244083-4ecuib7ub8dpn8aar11gqjkcvem1tnun.apps.googleusercontent.com</string>
    <string name="chat_name_placeholder">John Doe</string>
    <string name="recent_message">Recent Message</string>
    <string name="text_placeholder">Text Placeholder!</string>
    <string name="message_hint">Message...</string>
    <string name="desired_lang_text">Languages you want to learn...</string>
    <string name="proficient_lang_text">Languages you are proficient in...</string>
    <string name="learn_pref_text">How do you want to learn?</string>
    <string name="login_error">Login failed. Please try again.</string>
    <string name="login_granted">Login granted.</string>
    <string name="sign_up_error">Sign Up failed. Please try again.</string>
    <string name="sign_up_granted">Sign Up granted.</string>
    <string name="select_languages">Select Languages</string>
    <string name="select_learning_preference">Select a Learning Preference</string>
    <string name="interests_text">What are your interests?</string>
    <string name="select_interests_text">Select your interests</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="age">Age</string>
    <string name="complete_sign_up">Submit</string>
    <string name="preference_file_key">com.example.langsync.preferencefile</string>
    <string name="no_matches">No Matches at this time! Come back later…</string>
    <string name="no_messages_text">No messages, send a message to start the conversation!</string>
    <string name="schedule_meeting">Schedule Meeting</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="select_date">Select Date</string>
    <string name="meeting_time">Meeting Time</string>
    <string name="select_time">Select Time</string>
    <string name="meeting_duration">Meeting Duration</string>
    <string name="create_event">Create session</string>
    <string name="meeting_error">Create Meeting failed. Please try again.</string>
    <string name="meeting_successful">Meeting created</string>
    <string name="select_all_meeting_details">Please, select all meeting details</string>
    <string name="invited_user_id_key">INVITED_USER</string>
    <string name="channel_key">CHANNEL_KEY</string>
    <string name="video_call_text">Video Call</string>
    <string name="video_call_leave">Leave Video Call</string>
    <string name="admin_login_text">Have an admin access code? Login here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="toggle_ai">Toggle Ai</string>
    <string name="loading_messages">Loading Messages</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout successfully</string>
    <string name="error_get_events">Error getting events</string>
    <string name="error_delete_events">Error deleting event, try again</string>
    <string name="gold_match_badge_id">5f6d88b9d4b4d4c6a0b0f6b3</string>
    <string name="silver_match_badge_id">5f6d88b9d4b4d4c6a0b0f6b2</string>
    <string name="bronze_match_badge_id">5f6d88b9d4b4d4c6a0b0f6b1</string>
    
    <string name="gold_session_badge_id">5f6d88b9d4b4d4c6a0b0f6b4</string>
    <string name="silver_session_badge_id">5f6d88b9d4b4d4c6a0b0f6b5</string>
    <string name="bronze_session_badge_id">5f6d88b9d4b4d4c6a0b0f6b6</string>


    <string-array name="duration_options">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
    </string-array>
</resources>
