<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <ImageView
        android:id="@+id/langsync_form_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/langsync_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/logo_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/langsync_form_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proficient_lang_text"
            android:textSize="18sp"
            android:fontFamily="@font/poppins" />

        <TextView
            android:id="@+id/proficient_languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/message_input_styling"
            android:drawablePadding="16dp"
            android:hint="@string/select_languages"
            android:padding="16dp"
            app:drawableRightCompat="@android:drawable/arrow_down_float" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desired_lang_text"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins" />

        <TextView
            android:id="@+id/desired_languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/message_input_styling"
            android:drawablePadding="16dp"
            android:hint="@string/select_languages"
            android:padding="16dp"
            app:drawableRightCompat="@android:drawable/arrow_down_float" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_pref_text"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins" />

        <TextView
            android:id="@+id/learning_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/message_input_styling"
            android:drawablePadding="16dp"
            android:hint="@string/select_learning_preference"
            android:padding="16dp"
            app:drawableRightCompat="@android:drawable/arrow_down_float" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interests_text"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins" />

        <TextView
            android:id="@+id/interests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/message_input_styling"
            android:drawablePadding="16dp"
            android:hint="@string/select_interests_text"
            android:padding="16dp"
            app:drawableRightCompat="@android:drawable/arrow_down_float" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/how_old_are_you"
            android:textSize="18sp" />
        
        <TextView
            android:id="@+id/age"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/message_input_styling"
            android:drawablePadding="16dp"
            android:hint="@string/age"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:width="360dp"
            android:height="70dp"
            android:backgroundTint="@color/logo_color"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/complete_sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp" />
            
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>